--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="twitter:creator" content="@DavidGM_UX">
   <meta name="twitter:title" content="PHILOSOPHICAMX.COM">
   <meta name="twitter:description" content="&#x1f9d9; Hacking philosophy: Repos, conferencias, eventos & recursos libres">
-  <meta name="twitter:image" content="https://github.com/PHILOSOPHICA/Git-philosophy/blob/main/theme.jpg?raw=true">
+  <meta name="twitter:image" content="https://github.com/PHILOSOPHICA/luchar-la-esperanza/blob/main/PR.png?raw=true">
   <style>
     /* Estilos lado izquierdo */
     .fixed-side {
