--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
       body.classList.toggle('dark-mode');
     }
   </script>
-  <footer>Made with &#x2764;&#xfe0f; By Philosophica</footer>
+  <footer>Made with &#x2764;&#xfe0f; By PHILOSOPHICA</footer>
 </body>
 
 </html>
