--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <a href="https://twitter.com/udp_cl/status/1657053022516572161?s=20" target="_blank">@UDP</a>
     </p>
     <p>Conferencia de Marina Ortega-Andrés (UPV/EHU) titulada "El lenguaje como herramienta de cambio: desenmarañando el debate en torno al lenguaje inclusivo".
-      <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fforms.gle%2FFDS2CnoRsc3UWZ3c7%3Ffbclid%3DIwAR323TQL9aWnOAEVys74RS_YMkl2q4mzVzmoAfMsnq_1IYFq6LrcrHOtwa8&h=AT0mKhry0I56Z6Zaeh8CO5TyCXkQC55D_e18zk1JocwP1-oHq6zuKVn6ovteEcuCds90zc8h-uAKYDrw8mXfG1EYhKlqMyXUQgnrOwIRmguGxdXqhK6GXqDENpRGY4xbBRGi&__tn__=-UK-R&c[0]=AT1NEdLDbiCVA732Ic-L0wHoVPZJO0q3TktaRmlwpCPVya0T8Rf7V3sRlFUtmip6u14X32C0be4YJjLQxqR31RrkMYjOvxYxo36tMImo4PzNzeWisq9M530aB3t9BsTp86lvcBPNEQ2EPiWzIjfDZ2XBjIa2Lg" target="_blank">&nbsp; REGÍSTRATE AQUÍ
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSccY_5Jss3UDmyd5uxzXwfriYWcD8r2Bp58MvRB6-ikf8nz0g/viewform" target="_blank">&nbsp; REGÍSTRATE AQUÍ
       </a>   Y Sigue a:
      <a href="https://www.facebook.com/facultaddefilosofia.universidaddemurcia" target="_blank">Universidad de Murcia</a>
     <p>_ Conferencia: LA FILOSOFÍA DEL EXILIO DE TONI NEGRI <a href="https://www.youtube.com/watch?v=bdnHiHG9Nns"
